# PPP-Management_of_a_Team_Classification_System

./: README.md
src/: CMakeLists.txt  GerirFicheirosEntrada_funcoes.c  GerirFicheirosEntrada_header.h  GerirFicheirosEntrada_main.c  ProjetoPrincipal_funcoes.c  ProjetoPrincipal_header.h  ProjetoPrincipal_main.c
